<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeiCar</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="back">返回</string>
    <string name="comfirm">确定</string>
    <string name="comfirm1">确认</string>
    <string name="next">下一步</string>
    <string name="add">添加</string>
    <string name="submit">提交</string>
    <string name="agree">同意</string>
    <string name="refuse">拒绝</string>
    <string name="map">地图</string>
    <string name="search">搜索</string>
    <string name="no_named">未命名</string>
    <string name="sorry_no_result">抱歉，未找到结果</string>
    <string name="can_not_null">不能为空</string>
    <string name="phone_num">手机号</string>
    <string name="verify_num">验证码</string>
    <string name="verify_num_send_success">验证码发送成功</string>
    <string name="verify_num_send_fail">验证码发送失败，请稍后再试。</string>
    <string name="request_fail">请求失败</string>
    <string name="request_fail_please_try_again_later">请求失败,请稍后再试</string>
    
    
    <string name="phoneerror">手机格式有误</string>
    
    <string name="password1">密码</string>
    <string name="confirm_password">确定密码</string>
    <string name="password_not_same">两次输入密码不相同</string>
    
    <!--  -->
    
    
    <!-- 排行 -->
    <string name="rank">排行</string>
    <string name="my_rank">我的排名</string>
    <string name="current_rank">当前排名</string>
    <!-- 车友 -->
    <string name="car_friend">车友</string>
    
    <string name="my_car_friends">我的车友</string>
    
    <string name="car_friend_chat">聊天</string>
    
    <string name="car_friend_add">添加车友</string>
    <string name="car_friend_cf_group">车友群</string>
    <string name="car_friend_cf_verify_messge">车友验证消息</string>
    <string name="car_friend_group_verify_message">群验证消息</string>
    
    <string name="car_friend_clean_all">清空</string>
    <string name="car_friend_nearby_cf">附近车友</string>
    <string name="car_friend_search_group">找群</string>
    <string name="car_friend_search_cf">找车友</string>
    <string name="car_friend_contact">通讯录</string>
   
    
    
    
    <!-- 车辆管理 -->
    <string name="car_manager">车辆管理</string>
    
    
    

    <!-- 个人中心 -->
    <string name="personal_center_">个人中心</string>
    <string name="personal_center_address_manager">收货地址管理</string>
    <string name="personal_center_gps_data_share">GPS数据共享</string>
    <string name="personal_center_voice_tip">消息提示音</string>
    <string name="personal_center_change_background">换背景</string>
    <string name="personal_center_clean_cache">清除缓存</string>
    <string name="personal_center_regard_ours">关于我们</string>
    <string name="personal_center_feedback">意见反馈</string>
    <string name="personal_center_sign">签名</string>
    <string name="address_manager_person">收货人</string>
    <string name="address_manager_phone">手机号码</string>
    <string name="address_manager_zip_code">邮政编码</string>
    <string name="address_manager_address">所在地区</string>
    <string name="address_manager_detail_address">详细地址</string>
    <string name="address_manager_delete_address">删除收货地址</string>
    <string name="address_manager_detail_address_hint">街道门牌信息</string>
    <string name="address_manager_address_message">地区信息</string>
    <string name="address_manager_phone_hint">11位手机号</string>
    <string name="address_manager_person_hint">名字</string>
    <string name="personal_pic">头像</string>
    <string name="password_change">修改密码</string>
    <string name="personal_profile_address">地区</string>
    <string name="password_old">旧密码</string>
    <string name="password_old_hint">请输入旧密码</string>
    <string name="password_new">新密码</string>
    <string name="password_new_hint">密码必须是6-16位</string>
    <string name="password_new_confirm">确认新密码</string>
    <string name="password_new_confirm_hint">请再次填写密码</string>
    <string name="feedback_tip">欢迎提需求或意见，我们的进步离不开你的反馈！</string>
    <string name="feedback_contact">联系方式（Email或QQ）</string>

    <!-- 首页 -->
    <string name="homepager_add_car">添加您的爱车，以便有效管理</string>

    <!-- 位置信息服务 -->
    <string name="navigation">导航</string>
    <string name="location_information_service">位置信息服务</string>
    <string name="starting_point">起点</string>
    <string name="end">终点</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="personprofile">个人资料</string>

    <!-- <string name=""></string> -->

    <string name="nicheng">昵称</string>
    <string name="please_input_nicheng">请输入昵称</string>
    <string name="password">密码</string>
    <string name="forget_password">忘记密码</string>

    <!-- 添加车辆 -->
    <string name="ac_add_car">添加车辆</string>
    <string name="ac_car_device_num">设备号</string>
    <string name="ac_car_num">车牌号</string>
    <string name="ac_car_Vehicle_Identification_Number">车架号</string>
    <string name="ac_car_engine">发动机号</string>
    <string name="ac_car_sort">车型</string>
    <string name="ac_car_buy_time">购买时间</string>
    <string name="ac_car_recommend">推荐人</string>
    <string name="ac_tip_head">请对照《机动车行驶证》认真填写一下信息</string>
    <string name="ac_tip_end">你的信息仅用于违章代查，违章提醒等服务\n\n我们将会严格保密，请放心填写</string>

    <!-- 设备信息 -->
    <string name="device_please_input_ac_device_num">请输入设备号</string>
    <string name="device_please_input_ac_car_num">请输入车牌号</string>
    <string name="device_please_input_ac_vin">请输入车架号</string>
    <string name="device_please_input_ac_car_sort">请输入车型</string>
    <string name="device_please_input_ac_car_buy_time">请输入购买时间</string>
    <string name="device_please_input_ac_car_recommend">请输入推荐人</string>
    <string name="device_please_input_ac_car_engine">请输入发动机号</string>

    <!-- 违章查询 -->

    <string name="illegal_query_">违章查询</string>
    <string name="illegal_query_address">违章地点</string>
    <string name="illegal_query_content">违章内容</string>
    <string name="illegal_query_time">违章时间</string>
    <string name="illegal_query_state">当前状态</string>
    <string name="illegal_query_money">罚款金额</string>
    <string name="illegal_query_points">扣分情况</string>
    <string name="illegal_car_num">车牌号码:</string>
    <string name="illegal_engine">发动机号:</string>
    <string name="illegal_VIN">车架号码:</string>
    <string name="illegal_query_city">查询城市:</string>
    <string name="illegal_please_input_car_num">请输入车牌号码</string>
    <string name="illegal_please_input_engine">请输入发动机后6位</string>
    <string name="illegal_please_input_VIN">请输入车架号后6位</string>
    <string name="illegal_please_input_query_city">请输入查询城市</string>
    <string name="illegal_choice_city">请选择城市</string>
    <string name="illegal_choice_province">请选择省份</string>

    <!-- 注册 -->
    <string name="register_not_null1">注册(必填)</string>
    <string name="register_not_null">(必填)</string>
    <string name="register_person_information">个人信息</string>
    <string name="register_device_information">设备信息</string>
    <string name="register_phone_num">请输入您的手机号码</string>
    <string name="register_phone_verfity_num">请输入手机验证码</string>
    <string name="register_password">请输入6-16位密码</string>
    <string name="register_confirm_password">请确认密码</string>

    <!-- 个人信息 -->
    <string name="sex">性别</string>
    <string name="age">年龄</string>
    
    
    <!-- 添加车友  找群 -->
    <string name="phone_num_group_num">手机号/群</string>
    
    
    
    
    
    <!-- 硬件视频通讯 -->
     <!--  <string name="app_name">RollupDemo</string>
    <string name="login">登录</string> -->
    <string name="regist">注册</string>
    <string name="login_account">账号</string>
   <!--  <string name="password">密码</string> -->
    <string name="string_email">邮箱</string>
    <string name="username">姓名</string>
    <string name="city">城市</string>
    <string name="being_register">正在注册</string>
    <string name="waiting">请稍后</string>
    <string name="login_progress">正在登录&#183;&#183;&#183;</string>
	<string name="string_no_name">未命名</string>
	<string name="login_failure">登录失败</string>
	<string name="login_psd_error">账户或密码错误</string>
	<string name="login_regist_error">账户或密码错误</string>
	<string name="back_runing">正在后台运行</string>
	<string name="string_underline">离线</string>
	<string name="string_online">在线</string>
	<string name="device_offline">设备不在线</string>
	<string name="string_doorbind">增加/删除</string>
	<string name="isexit">退出？</string>
	<string name="connect_fail">连接失败</string>
	<string name="device_busy">设备端忙</string>
	<string name="result_failure">失败</string>
	<string name="result_success">成功</string>
	<string name="not_sdcard">请插入SD卡</string>
	<string name="reject_bind">设备端拒绝</string>
	<string name="success">成功</string>
	<string name="failure">失败</string>
	<string name="bind_timeout">超时</string>
	<string name="is_binding">正在添加</string>
	<string name="cancel_binging">正在删除</string>
	<string name="input_name_error">有非法字符</string>
	<!-- <string name="add">添加</string>
	<string name="back">返回</string> -->
	<string name="input_device_no">设备号</string>
	<string name="input_device_name">设备别名</string>
	<string name="ok">确定</string>
	<string name="cancle">取消</string>
	<string name="had_binded">已添加</string>
	<string name="input_error">输入有误</string>
	<string name="max_door_count">已到达最大数值</string>
	<string name="enture_cancel">确定要删除吗?</string>
	<string name="string_recording">正在录像</string>
	<string name="string_start_record">录像</string>
    <string name="string_end_record">结束录像</string>
    <string name="exit_video">结束视频</string>
    <string name="string_videoing">正在视频通话中</string>
    <string name="str_calling">连接成功，正在等待用户响应</string>
    <string name="remind">提示</string>
    <string name="str_call">连接</string>
    <string name="ready_connect_string">准备连接设备号为:</string>
    <string name="ihome_device">的设备</string>
    <string name="str_againlogin">账号在异处登录，请重新登录</string>
    <string name="str_servercolse">当前业务服务器关闭，请稍后登录</string>
    <string name="str_networkcheck">当前网络连接有异常，请检查网络</string>
    <string name="str_exitresume">是否想要退出这个账号？</string>
    <string name="str_endsession">是否想要结束当前通话</string>
	<string name="str_returncode_timeout">连接超时</string>
	<string name="str_returncode_bussiness">用户正在连接中，设备正忙</string>
    <string name="str_returncode_offline">用户不在线</string>
    <string name="str_returncode_requestcancel">用户取消呼叫</string>
    <string name="str_returncode_requestrefuse">无法建立通话，对方网络不稳定</string>
    <string name="str_returncode_disconnect">对方网络异常</string>
    <string name="sessioning_reqite">请求与您通话！</string>
    
    
    

</resources>