<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <include 
        
        layout="@layout/newbrain_all_actionbar"
        />
    
    
     <LinearLayout
        style="@style/personal_center_linear"
        android:layout_marginTop="1dip"
        >

        <LinearLayout style="@style/receiver_address_linear" >

            <TextView
                style="@style/receiver_address_textview"
                android:text="@string/password_old" />

            <EditText
               android:hint="@string/password_old_hint"
                android:id="@+id/password_old"
                style="@style/receiver_address_edittext" />
        </LinearLayout>

        <View style="@style/personal_center_view_divider" />
        
        
        <LinearLayout style="@style/receiver_address_linear" >

            <TextView
                style="@style/receiver_address_textview"
                android:text="@string/password_new" />

            <EditText
                 android:hint="@string/password_new_hint"
                android:id="@+id/password_new"
                style="@style/receiver_address_edittext" />
        </LinearLayout>

        <View style="@style/personal_center_view_divider" />
        
        <LinearLayout style="@style/receiver_address_linear" >

            <TextView
                style="@style/receiver_address_textview"
                android:text="@string/password_new_confirm" 
                android:textSize="14sp"
                />

            <EditText
                 android:hint="@string/password_new_confirm_hint"
                android:id="@+id/password_new_confirm"
                style="@style/receiver_address_edittext" />
        </LinearLayout>

        

    </LinearLayout>
    

</LinearLayout>
