<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_background_color"
    android:orientation="vertical" >

    <include layout="@layout/newbrain_all_actionbar" />

    <LinearLayout
        style="@style/personal_center_linear"
        android:layout_marginTop="1dip"
        >

        <LinearLayout style="@style/receiver_address_linear" >

            <TextView
                style="@style/receiver_address_textview"
                android:text="@string/address_manager_person" />

            <EditText
               android:hint="@string/address_manager_person_hint"
                android:id="@+id/address_manager_person"
                style="@style/receiver_address_edittext" />
        </LinearLayout>

        <View style="@style/personal_center_view_divider" />
        
        
        <LinearLayout style="@style/receiver_address_linear" >

            <TextView
                style="@style/receiver_address_textview"
                android:text="@string/address_manager_phone" />

            <EditText
                 android:hint="@string/address_manager_phone_hint"
                android:id="@+id/address_manager_phone"
                style="@style/receiver_address_edittext" />
        </LinearLayout>

        <View style="@style/personal_center_view_divider" />
        
        <LinearLayout style="@style/receiver_address_linear" >

            <TextView
                style="@style/receiver_address_textview"
                android:text="@string/address_manager_zip_code" />

            <EditText
                 android:hint="@string/address_manager_zip_code"
                android:id="@+id/address_manager_zip_code"
                style="@style/receiver_address_edittext" />
        </LinearLayout>

        <View style="@style/personal_center_view_divider" />
        
        <LinearLayout style="@style/receiver_address_linear" >

            <TextView
                style="@style/receiver_address_textview"
                android:text="@string/address_manager_address" />

            <EditText
                 android:hint="@string/address_manager_address_message"
                android:id="@+id/address_manager_address"
                style="@style/receiver_address_edittext" />
        </LinearLayout>

        <View style="@style/personal_center_view_divider" />
        
        
        <LinearLayout style="@style/receiver_address_linear" >

            <TextView
                style="@style/receiver_address_textview"
                android:text="@string/address_manager_detail_address" />

            <EditText
                android:hint="@string/address_manager_detail_address_hint"
                android:id="@+id/address_manager_detail_address"
                style="@style/receiver_address_edittext" />
        </LinearLayout>

    </LinearLayout>
    
    
    <LinearLayout 
        
         style="@style/personal_center_linear"
        android:layout_marginTop="8dip"
        android:paddingTop="4dip"
        android:paddingBottom="4dip"
        >
        
        
        <TextView
                style="@style/receiver_address_textview"
                android:text="@string/address_manager_detail_address"
                
                android:textColor="@color/theme_text_normal_color_red"
                
                 />
        
        
    </LinearLayout>
    
    
    

</LinearLayout>